# HMIViewer

./: AM.pro  CMakeLists.txt  HMIResources.qrc  ViewManager.pro  am-config.yaml  build.sh  main.cpp  prerequisite.sh  run.sh  ui.pro
HMIController/: HMIController.pri
HMIController/HMIDefines/: ViewEnums.h  ViewStructs.h
QML/: RootScreen.qml
View/: View.pri
View/Defines/: ViewDefines.h
View/ScreenManager/: ScreenManager.cpp  ScreenManager.h
View/ViewController/: HMIController.cpp  HMIController.h
apps/AC/: info.yaml
apps/EV/: info.yaml
native/: CMakeLists.txt  native.pro
native/AC/: AC.pro  CMakeLists.txt  main.cpp
native/AC/QML/: ScreenA.qml  ScreenB.qml
native/HOME/: CMakeLists.txt  HOME.pro  UIProperties.h  main.cpp
native/HOME/Resources/: CenterDisplay.qml  HMI.qrc
native/HOME/SystemManipulation/: SystemManipulation.cpp  SystemManipulation.h
native/HOME/SystemManipulation/ContextManager/: ContextManager.cpp  ContextManager.h
native/HOME/SystemManipulation/UIControl/: UIControl.cpp  UIControl.h
native/UICommon/: CMakeLists.txt  UICommon.pro  uicommon.cpp  uicommon.h
native/UICommon/HMIController/HMIDefines/: Defines.h
native/UICommon/HMIController/ScreenManager/: ScreenManager.h
native/UICommon/HMIController/ViewController/: HMIController.cpp  HMIController.h
native/UICommon/Proxy/SystemUI/: SystemUIAdapter.cpp  SystemUIAdapter.h  SystemUIAgency.h  SystemUIInterface.cpp  SystemUIInterface.h  SystemUITypeInfo.h
native/UICommon/UIConstant/: UILayout.h
system-ui/: main.qml
